Fix icons alignment

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,3 +1,3 @@
 .md-nav__list svg {
-    max-width: 18px;
+    max-width: 18px !important;
 }
